@@ -428,7 +428,12 @@ void _newspec(rpmts ts, char * filename, SV * svpassphrase, SV * svrootdir, SV *
     
     if (filename) {
 #ifdef RPM4_9_0
-        spec = rpmSpecParse(filename, RPMSPEC_ANYARCH|RPMSPEC_FORCE, NULL);
+        rpmSpecFlags flags = 0;
+        if (anyarch)
+             flags |= RPMSPEC_ANYARCH;
+        if (force)
+             flags |= RPMSPEC_FORCE;
+        spec = rpmSpecParse(filename, flags, NULL);
 #else
 	if (!parseSpec(ts, filename, rootdir, NULL ,0, passphrase, cookies, anyarch, force))
             spec = rpmtsSetSpec(ts, NULL);
